[package]
name = "turnkey_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
hex = "0.4"
rand = "0.9.1"
serde_json = "1.0"
sha3 = "0.10"
tokio = { version = "1.45.0", features = ["full"] }
turnkey_api_key_stamper = "0.0.2"
turnkey_client = "0.0.2"
turnkey_enclave_encrypt = "0.1.0"
